--- a/Goova.JsonDataContractSerializer.csproj
+++ b/Goova.JsonDataContractSerializer.csproj
@@ -35,6 +35,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
@@ -48,7 +49,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="NewtonsoftJsonBehavior.cs" />
+    <Compile Include="NewtonsoftJsonBehaviorExtension.cs" />
     <Compile Include="NewtonsoftJsonClientFormatter.cs" />
+    <Compile Include="NewtonsoftJsonContentTypeMapper.cs" />
     <Compile Include="NewtonsoftJsonDispatchFormatter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RawBodyWriter.cs" />
