--- a/Goova.JsonDataContractSerializer.csproj
+++ b/Goova.JsonDataContractSerializer.csproj
@@ -54,6 +54,7 @@
     <Compile Include="NewtonsoftJsonDispatchFormatter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RawBodyWriter.cs" />
+    <Compile Include="StreamWithHeaders.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
